...
            android:textColor="@color/subtleText"
            android:textSize="14sp"
            android:fontFamily="@font/poppins"
            android:background="?attr/selectableItemBackgroundBorderless" />

        <TextView
            android:id="@+id/yesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="DELETE"
...
